#150 Tests für CustomSearchService, SearchEventEndpoint und SearchValidator geschrieben